welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: ')' expected but 'if' found.
	if (13<=b && b<=19) { nb=nb+1}
        ^countTeen:5: error: ';' expected but 'if' found.
	if (13<=c && c<=19) { nb=nb+1}
        ^