welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var nb=0
	if (if (13<=a && a<=19) { nb=nb+1}
	if (13<=b && b<=19) { nb=nb+1}
	if (13<=c && c<=19) { nb=nb+1}
	if (13<=d && d<=19) { nb=nb+1})
	{return nb} 
	
}
